# linebase

./: .gitignore  README.md  pyproject.toml
eval/: redbox_bboxes.json  redbox_gold.json
fixtures/: README.md  demo_workbook.xlsx  demo_workbook_diverse.xlsx  focus_2failures.xlsx  iter5_stress.xlsx  truthset_e2e.xlsx
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
prompts/: v_1.md  v_2.md  v_3.md  v_4.md  v_4_refine.md  v_4_retry.md  v_design_1.md  verify_v_1.md  verify_v_design_1.md
research/: lite-benchmark-4way.md  qwen3vl-system-validation.md  user-model-picker.md
scripts/: _diag_doubao_stall.py  _diag_doubao_stall2.py  _drain_morning.py  _e2e_range.py  _probe_plumbing.py  _rerun_two_bad_rows.py  _xlsx_smoke.py  analyze_any_overlap.py  baseline_eval.py  benchmark_models.py  build_design_dataset.py  build_focus_2.py  build_iter5_stress.py  build_success_gallery.py  build_truthset.py  build_truthset_xlsx.py  compare_runs.py  detect_redbox.py  e2e_design_dataset.py  e2e_real_xlsx.py  e2e_single_truth.py  eval_runner.py  extract_demo_workbook.py  parse_truthset_docx.py  probe_llm.py  probe_v2_scalars.py  render_baseline_report.py  score_against_truth.py  score_e2e_against_truth.py  sim_padding.py  sim_variance_filter.py  write_benchmark_report.py
tests/: test_blank_reject_bbox_suppression.py  test_edge_refine.py  test_job_create_rows.py  test_pass1_variance_gate.py  test_prompt_selection.py  test_refine_pass.py  test_sift_refine.py  test_tile_scan.py  test_tile_scan_filter.py  (+3 more)
(+142 files in other folders)
