[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linebase"
version = "0.1.0"
description = "Logo line-art / real-photo auto-match + crop pipeline for USPTO trademark workflows"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "httpx>=0.27.2",
    "imagehash>=4.3.1",
    "scikit-image>=0.24.0",
    "numpy>=2.1.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
linebase = "linebase.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
